overflow fix

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 body {
   background-color: #0a2647;
+  overflow-x: hidden;
 }
 
 .add-new-movie-button {
@@ -176,8 +177,8 @@ ul {
 }
 
 #edit-modal {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   top: 0;
   position: fixed;
   display: flex;
@@ -187,8 +188,8 @@ ul {
   z-index: 2;
   background-color: rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(5px);
-  overflow: hidden;
   display: none;
+  overflow: hidden;
 }
 
 .movie-edit {
@@ -236,8 +237,8 @@ ul {
   display: none;
   position: absolute;
   top: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
